# janus

./: .gitignore  .npmignore  AGENTS.md  Dockerfile  README.md  docker-compose.cloudflare.yaml  docker-compose.smoke.yaml  go.mod  janus.docker.yaml  janus.example.yaml  package.json
.github/workflows/: ci.yml  publish.yml  release.yml
cmd/janus/: main.go
docs/: MVP_PLAN.md  PRD.md
internal/api/: auth_test.go  server.go  server_test.go
internal/app/: app.go
internal/auth/: auth.go  auth_test.go
internal/cli/: root.go
internal/config/: config.go  config_test.go
internal/events/: events.go
internal/health/: checker.go  checker_test.go
internal/mcp/: client.go  protocol.go  server.go  server_test.go
internal/metrics/: metrics.go  metrics_test.go
internal/notify/: manager.go
internal/recovery/: engine.go  engine_test.go
internal/registry/: registry.go  registry_test.go  store.go  types.go
internal/supervisor/: process.go  process_test.go
internal/tunnel/: types.go
pkg/emitter/: emitter.go
pkg/janus/: client.go
pkg/receiver/: receiver.go  receiver_test.go
sdk/npm/: README.md  index.js  index.test.js  package.json
sdk/npm/janus/: README.md  (+1 more)
sdk/npm/janus-client/: README.md  index.js  index.test.js  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/janus/: README.md  janus_cli.py  pyproject.toml
sdk/python/janus-client/: README.md  pyproject.toml
sdk/python/janus-client/janus_client/: __init__.py
sdk/python/janus-client/tests/: test_client.py
sdk/python/janus/tests/: test_cli.py
test/e2e/: live_daemon_test.go
(+2 files in other folders)
